[tool.poetry]
name = "timeseriesconcepts.py"
version = "0.1.0"
description = "Time series tutorials"
authors = ["edwinb-ai <developeredwin@gmail.com>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.4"
matplotlib = "^3.3.2"
numpy = "^1.19.3"
Pweave = "^0.30.3"
statsmodels = "^0.12.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
